fixing mailer bugs

--- a/app/views/password_mailer/reset_password.html.erb
+++ b/app/views/password_mailer/reset_password.html.erb
@@ -1,5 +1,5 @@
 <h1>Hello, <%= @user.full_name %></h1>
-  <a href="localhost:4000/reset_password/<%= @user.reset_password_token %>"><p>
+  <a href="https://medikuy.herokuapp.com/reset_password/<%= @user.reset_password_token %>"><p>
     click here to reset your password.
   </p> </a>
 <p>Great day!!</p>
