fixing reset password link

--- a/app/views/password_mailer/reset_password.html.erb
+++ b/app/views/password_mailer/reset_password.html.erb
@@ -1,5 +1,9 @@
 <h1>Hello, <%= @user.full_name %></h1>
-  <a href="localhost:4000/reset_password/<%= @user.reset_password_token %>"><p>
+  <a href="http://localhost:4000/password/edit/<%= @user.reset_password_token %>"><p>
     click here to reset your password.
   </p> </a>
+  </hr>
+  <p>If you did not request your password to be reset, just ignore this e-mail and your password will stay the same.</p>
 <p>Great day!!</p>
+
+<%# href="http://localhost:4000/password/reset?reset_password_token=<%= @user.reset_password_token %>" %>
