--- a/app/views/password_mailer/reset_password.html.erb
+++ b/app/views/password_mailer/reset_password.html.erb
@@ -1,9 +1,20 @@
+<div>
 <h1>Hello, <%= @user.full_name %></h1>
   <a href="http://localhost:4000/password/edit/<%= @user.reset_password_token %>"><p>
     click here to reset your password.
   </p> </a>
   </hr>
   <p>If you did not request your password to be reset, just ignore this e-mail and your password will stay the same.</p>
-<p>Great day!!</p>
+</div>
+<div>
+  <p>Great day!</p>
+  <br/>
+  <br/>
+  <br/>
+  <p>Sincerely,</p>
+  <br/>
+  </p><i>Medikuy team</i></p>
+</div>
 
-<%# href="http://localhost:4000/password/reset?reset_password_token=<%= @user.reset_password_token %>" %>
+
+<%# href="http://localhost:4000/password/reset?reset_password_token=<%= @user.reset_password_token %>
