fixing email reset password bugs

--- a/app/views/password_mailer/reset_password.html.erb
+++ b/app/views/password_mailer/reset_password.html.erb
@@ -1,6 +1,6 @@
 <div>
 <h1>Hello, <%= @user.full_name %></h1>
-  <a href="https://medikuy.herokuapp.com/password/edit/<%= @user.reset_password_token %>"><p>
+  <a href="http://localhost:4000/password/edit/<%= @user.reset_password_token %>"><p>
     click here to reset your password.
   </p> </a>
   </hr>
